[uast, tests] Rewrite GeneratePossibleSourceTypesMapping to no longer depend on ScalaFileSetTestCase and document how to exactly use the script #SCL-25088